fix: side overflow

--- a/css/sobre_mi.css
+++ b/css/sobre_mi.css
@@ -47,7 +47,7 @@
   justify-content: center;
   align-items: center;
   width: 100%;
-  overflow: hidden;
+  overflow-x: hidden;
   background-color: var(--oscuro);
 }
 
